<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pdm.alvaro.museumcomments.PanelActivity">

    <TextView
        android:text="@string/hola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/welcomeText"
        android:typeface="normal"
        android:textSize="24sp"
        android:textColor="@android:color/black" />

    <Button
        android:text="@string/ver_opinones"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:id="@+id/verbutton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorSecundario"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/background_light" />

    <TextView
        android:text="@string/deja_opinion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/textView1"
        android:textSize="18sp" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:id="@+id/recyler"
        android:layout_above="@+id/verbutton" />

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/salida"
        android:layout_below="@+id/recyler"
        android:layout_alignParentEnd="true"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/exitbutton" />

    <Button
        android:text="@string/sugerencia"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/sugerenciaButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:background="@color/colorSecundario"
        android:textColor="@android:color/background_light" />

</RelativeLayout>
