<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sugerencia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pdm.alvaro.museumcomments.SugerenciaActivity">

    <TextView
        android:text="@string/enviar_sugerencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSugerencia1"
        android:textSize="20sp"
        android:typeface="normal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimary"
        android:textStyle="normal|italic" />

    <TextView
        android:text="@string/elige_tema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSugerencia1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:id="@+id/tvSugerencia2"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary" />

    <ImageButton
        android:layout_height="40dp"
        app:srcCompat="@drawable/volver48"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/returnButton"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="80dp" />

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/salida"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/exitButton" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:id="@+id/spinner"
        android:layout_below="@+id/tvSugerencia2"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/escribir_sugerencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textColor="@color/colorPrimary"
        android:typeface="normal"
        android:textSize="20sp"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <EditText
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etSugerencia"
        android:gravity="left|top"
        android:layout_height="200dp"
        android:textColor="?android:attr/colorForeground"
        android:layout_width="300dp"
        android:layout_alignTop="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <Button
        android:text="@string/enviar_sugerencia2"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:id="@+id/sugerenciaButton"

        android:background="@color/colorSecundario"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/background_light"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
