<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <TextView
        android:text="@string/creado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/t1"
        android:typeface="normal"
        android:textSize="14sp"
        android:textColor="@android:color/black" />

    <TextView
        android:text="Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/t1"
        android:layout_toEndOf="@+id/t1"
        android:layout_marginStart="30dp"
        android:id="@+id/nombreText"
        android:textSize="14sp"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/tema_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/t2"
        android:typeface="normal"
        android:textSize="14sp"
        android:textColor="@android:color/black" />

    <TextView
        android:text="Comentario"
        android:layout_width="wrap_content"
        android:layout_alignTop="@+id/t3"
        android:layout_alignStart="@+id/nombreText"
        android:id="@+id/comentarioText"
        android:typeface="normal"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="vertical"
        android:layout_height="150dp" />

    <TextView
        android:text="Fecha"
        android:layout_width="wrap_content"
        android:layout_alignTop="@+id/t4"
        android:layout_alignStart="@+id/comentarioText"
        android:id="@+id/fechaText"
        android:typeface="normal"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="normal|italic"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <View
        android:id="@+id/linea"
        android:layout_width="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_height="1dp"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/fechaText"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="Tema"
        android:layout_width="wrap_content"
        android:id="@+id/temaText"
        android:typeface="normal"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:ellipsize="marquee"
        android:editable="false"
        android:freezesText="false"
        android:layout_alignBaseline="@+id/t2"
        android:layout_alignBottom="@+id/t2"
        android:layout_alignStart="@+id/nombreText"
        android:layout_height="150dp" />

    <TextView
        android:text="@string/comentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/t3"
        android:typeface="normal"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/temaText"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/publicado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/t4"
        android:typeface="normal"
        android:textStyle="normal|italic"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="12sp"
        android:layout_below="@+id/comentarioText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />
</RelativeLayout>